# AI-VOICE-ASSITANT

./: README.md  appointments_summary.xlsx  backend.py  check_db.py  database.py  fetch_logo.py  frontend.py  pyproject.toml  test_delete.py  test_endpoints.py  test_reschedule.py
scratch/: test_webhook.py
vapi/: demo_flow.md  system_prompt.txt  tools_config.json  vapi_settings.md
