[project]
name = "d-o-r-a-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "unicorn>=2.1.4",
    "uvicorn>=0.46.0",
]
